# bbordocs

./: .buildinfo  .buildinfo.bak  .gitignore  CNAME  Makefile  README.md  conf.py  genindex.html  index.html  index.rst  index.template.html  objects.inv  pyproject.toml  search.html  searchindex.js  translate.py  watcher.py
.doctrees/: environment.pickle  index.doctree
.doctrees/docs/: index.doctree
.doctrees/docs/api/: index.doctree
.doctrees/docs/app/: index.doctree
.github/workflows/: build.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: objects.inv  searchindex.js
_sources/: index.rst.txt
_sources/docs/: index.rst.txt
_static/: custom.css  switcher.template.json
docs/: conf.py  index.html
docs/api/: index.html
docs/app/: index.html  index.rst
docs/system/: index.html  systemdiagram.drawio
docs/terms/: index.rst
docs/vars/: en.rst
en/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
en/.doctrees/: environment.pickle  index.doctree
en/_sources/: index.rst.txt
en/_static/: switcher.json
en/api/: index.html
en/app/: index.html
en/system/: index.html
en/terms/: index.html
en/vars/: en.html  ja.html  locale.html
ja/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
ja/.doctrees/: environment.pickle  index.doctree
ja/_sources/: index.rst.txt
ja/_static/: custom.css  switcher.json
ja/api/: index.html
ja/app/: index.html
ja/system/: index.html
ja/terms/: full.html  index.html
ja/vars/: en.html  ja.html  locale.html
(+36 files in other folders)
